finishing code styling and adding screenshots

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,7 +8,37 @@
     <title>Responsive Product Card UI Design in HTML and CSS</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-    
+    <div class="container">
+        <div class="card">
+            <div class="card-header">
+                <img src="product.png" alt="Nike Air Max 270 - Running Collections">
+            </div>
+            <div class="card-body">
+                <div class="details">
+                    <h1>Nike Air Max 270</h1>
+                    <h4>Running Collections</h4>
+                    <p>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                        Mollitia unde aut voluptate repellat eveniet dolorem nesciunt
+                        reprehenderit explicabo molestiae? Dignissimos accusantium numquam
+                        quos repudiandae labore delectus molestiae repellendus, dolore facere.
+                        <br><br>
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                        Mollitia unde aut voluptate repellat eveniet dolorem nesciunt
+                        reprehenderit explicabo molestiae? Dignissimos accusantium numquam
+                        quos repudiandae labore delectus molestiae repellendus, dolore facere.
+                        <br>
+                    </p>
+                </div>
+                <div class="card-footer">
+                    <h3>R$150,99</h3>
+                    <button>Buy Now</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
